--- a/index.html
+++ b/index.html
@@ -14,36 +14,38 @@
         <div class="mobile-container">
             <header>
                 <input type="text">
-                <button id="search">Search</button>
+                <button id="search"><i class="fa fa-search"></i></button>
             </header>
             <div class="fav-container">
                 <h3>Favorite Meals</h3>
-                <ul>
+                <ul class="fav-meals">
                     <li>
                         <img src="https://www.themealdb.com/images/media/meals/1c5oso1614347493.jpg" alt="">
-                        <spam>Spring onion and prawn empanadas</spam>
+                        <spam>Spring onion</spam>
                     </li>
                     <li>
                         <img src="https://www.themealdb.com/images/media/meals/w8umt11583268117.jpg" alt="">
-                        <spam>Vegetable Shepherd's Pie</spam>
+                        <spam>Shepherd's Pie</spam>
                     </li>
                     <li>
                         <img src="https://www.themealdb.com/images/media/meals/yqwtvu1487426027.jpg" alt="">
-                        <spam>Stovetop Eggplant With Harissa, Chickpeas, and Cumin Yogurt</spam>
+                        <spam>Stovetop Eggplant </spam>
                     </li>
                 </ul>
             </div>
             <div class="meals">
-                <span class="random">
-                    Random Recipe
-                </span>
+                
                 <div class="meal">
+                    
                     <div class="meal-header">
+                        <span class="random">
+                            Random Recipe
+                        </span>
                         <img src="https://www.themealdb.com/images/media/meals/yqqqwu1511816912.jpg" alt="">
                     </div>
                     <div class="meal-body">
                         <h4>Veggie Veggies</h4>
-                        <button>
+                        <button class="fav-btn">
                             <i class="far fa-heart"></i>
                         </button>
                     </div>
