recipe fetching and rendering

--- a/index.html
+++ b/index.html
@@ -18,19 +18,8 @@
             </header>
             <div class="fav-container">
                 <h3>Favorite Meals</h3>
-                <ul class="fav-meals">
-                    <li>
-                        <img src="https://www.themealdb.com/images/media/meals/1c5oso1614347493.jpg" alt="">
-                        <spam>Spring onion</spam>
-                    </li>
-                    <li>
-                        <img src="https://www.themealdb.com/images/media/meals/w8umt11583268117.jpg" alt="">
-                        <spam>Shepherd's Pie</spam>
-                    </li>
-                    <li>
-                        <img src="https://www.themealdb.com/images/media/meals/yqwtvu1487426027.jpg" alt="">
-                        <spam>Stovetop Eggplant </spam>
-                    </li>
+                <ul class="fav-meals" id="fav-meals">
+                    
                 </ul>
             </div>
             <div class="meals" id="meals">
