--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
             <div class="meals" id="meals">
             </div>
         </div>
+        <div class="popup-container hidden" id="meal-popup">
+            <div class="popup" id="popup">
+                <button id="close-popup" class="close-popup">
+                    <i class="fas fa-times"></i>
+                </button>
+                <div class="meal-info" id="meal-info">
+                    
+                </div>
+                    
+            </div>
+        </div>
 </body>
 </html>
